--- a/App/smart-park/src/app/pages/auth/login/login.component.css
+++ b/App/smart-park/src/app/pages/auth/login/login.component.css
@@ -49,7 +49,7 @@ form {
   width: 80px;
   height: 80px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 50%;
   border: 3px solid #3b82f6;
   background: #fff;
@@ -62,7 +62,8 @@ form {
     max-height: 90vh;
     padding: 1.5rem 0.5rem;
   }
-  .input, .btn-primary {
+  .input,
+  .btn-primary {
     height: 48px;
     font-size: 1rem;
   }
@@ -70,4 +71,4 @@ form {
     width: 60px;
     height: 60px;
   }
-}/*# sourceMappingURL=login.component.css.map */
+} /*# sourceMappingURL=login.component.css.map */
